# 4sem

./: CMakeLists.txt  Doxyfile  README.md
Client/: CMakeLists.txt  client.cpp
Includes/: CMakeLists.txt  Edge.cpp  Node.cpp  Point.cpp  Polygon.cpp  Vertex.cpp
Methods/: CMakeLists.txt  mainMethod.cpp
Server/: CMakeLists.txt  server.cpp
Tests/: CMakeLists.txt  tests.cpp
